Fix z-index for new search location

--- a/app/react/styles/modules/site.styl
+++ b/app/react/styles/modules/site.styl
@@ -44,7 +44,9 @@ body
       font-size 14px
 
 .site__content
+  position relative
   padding 0
+  z-index 105
 
 .site__mobile-navigation
   max-height 0px
